...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/editDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="94dp"
            android:layout_marginEnd="41dp"
            android:layout_marginBottom="35dp"
            android:text="Done"
            android:textColor="@color/mint"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/circularImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/circularImageView"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="26dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDone">

            <ImageView
                android:layout_width="25dp"
...
                android:paddingLeft="10dp"
                android:text="First Name: "
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="Previous first name"
                android:maxEms="20"
                android:paddingLeft="20dp"
...
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="25dp"
...
                android:paddingLeft="10dp"
                android:text="Last Name: "
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="previous last name"
                android:maxEms="20"
                android:paddingLeft="20dp"
...
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <ImageView
                android:layout_width="25dp"
...
                android:paddingLeft="10dp"
                android:text="Username: "
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="previous username"
                android:maxEms="20"
                android:paddingLeft="20dp"
...
                android:text="Password: "
                android:textSize="20dp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/editPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType='textPassword'
                android:singleLine="true" />
...
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <ImageView
                android:layout_width="25dp"
...
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="38dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout15">

            <ImageView
                android:layout_width="25dp"
...
                android:paddingLeft="10dp"
                android:text="Birthday: "
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/birthday_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Date"
                android:textSize="20dp" />


        </LinearLayout>

        <LinearLayout
...
