...

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/profileEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="94dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="35dp"
            android:text="Edit"
            android:textColor="@color/mint"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/profileLogout"
            app:layout_constraintStart_toEndOf="@+id/circularImageView"
            app:layout_constraintTop_toTopOf="parent" />
...

            <TextView
                android:id="@+id/profileStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="Public"
                android:textSize="20dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
